# neuroflow

./: .bumpversion.cfg  .cookiecutterrc  .coveragerc  .gitignore  .readthedocs.yml  .travis.yml  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE  Makefile  README.rst  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt  setup.py  tox.ini  trials.ipynb
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: codecov_report.yml  github-actions.yml  upload_codecov.yml
_build/doctrees/: authors.doctree  contributing.doctree  environment.pickle  history.doctree  index.doctree  installation.doctree  readme.doctree  usage.doctree
docs/: conf.py  index.rst  installation.rst  make.bat  modules.rst  requirements.txt  usage.rst
docs/reference/: index.rst  neuroflow.rst
neuroflow-0.1.0/: PKG-INFO  pyproject.toml
neuroflow-0.1.0/docs/: conf.py
neuroflow-0.1.0/src/neuroflow/parcellation/: parcellation.py
neuroflow-0.1.0/src/neuroflow/recon_tensors/mrtrix3/: mrtrix3_tensors.py
neuroflow-0.1.0/tests/: test_neuroflow.py
neuroflow_yalab-0.1.2/: LICENSE  pyproject.toml
neuroflow_yalab-0.1.2/src/neuroflow/: cli.py
src/neuroflow/: __main__.py  cli.py
src/neuroflow/atlases/: atlases.py  utils.py
src/neuroflow/atlases/available_atlases/: available_atlases.py
src/neuroflow/connectome/: connectome_reconstructor.py
src/neuroflow/covariates/: __init__.py  available_qc_measures.py  covariate.py  covariates_collector.py  qc_manager.py
src/neuroflow/covariates/participant_demographics/: participant_demographics.py  utils.py
src/neuroflow/covariates/quality_control/: qc_diffusion_data.py  qc_manager.py  quality_control.py  striping_effect.py  utils.py
src/neuroflow/covariates/session_covariates/: session_covariates.py
src/neuroflow/files_mapper/: files_mapper.py  patterns.json  utils.py
src/neuroflow/interfaces/visualizations/: visualizations.py
src/neuroflow/interfaces/visualizations/matlab_scripts/: visualize_surface.asv  visualize_surface.m
src/neuroflow/parcellation/: available_measures.py  parcellation.py  utils.py
src/neuroflow/participant_demographics/: participant_demographics.py
src/neuroflow/recon_tensors/: dipy_tensors.py  recon_tensors.py
src/neuroflow/recon_tensors/dipy/: dipy_tensors.py
src/neuroflow/recon_tensors/mrtrix3/: mrtrix3_tensors.py
src/neuroflow/structural/: outputs.py  smriprep_runner.py  utils.py
tests/: test_cli.py  test_core.py  test_file_mapper.py  test_neuroflow.py
